@@ -81,12 +81,14 @@ class GetButtonsHook
         $queryBuilder->select('*')
             ->from($this->tablename)
             ->where(
-                $queryBuilder->expr()->andX(
-                    $queryBuilder->expr()->eq('pid', $currentRecord['pid']),
-                    $queryBuilder->expr()->eq('sys_language_uid', 0)
-                )
+                $queryBuilder->expr()->eq('pid', $currentRecord['pid'])
             );
 
+        if ($GLOBALS['TCA'][$this->tablename]['ctrl']['languageField']) {
+            $queryBuilder->andWhere(
+                $queryBuilder->expr()->eq($GLOBALS['TCA'][$this->tablename]['ctrl']['languageField'], 0)
+            );
+        }
         if ($GLOBALS['TCA'][$this->tablename]['ctrl']['sortby']) {
             $queryBuilder->orderBy($GLOBALS['TCA'][$this->tablename]['ctrl']['sortby'], Query::ORDER_ASCENDING);
         }
