@@ -40,11 +40,14 @@ class TableRecordsUtility
         $queryBuilder->select('*')
             ->from($tablename)
             ->where(
-                $queryBuilder->expr()->andX(
-                    $queryBuilder->expr()->eq('pid', $pid),
-                    $queryBuilder->expr()->eq('sys_language_uid', 0)
-                )
+                $queryBuilder->expr()->eq('pid', $pid)
             );
+
+        if ($GLOBALS['TCA'][$this->tablename]['ctrl']['languageField']) {
+            $queryBuilder->andWhere(
+                $queryBuilder->expr()->eq($GLOBALS['TCA'][$this->tablename]['ctrl']['languageField'], 0)
+            );
+        }
 
         if ($GLOBALS['TCA'][$tablename]['ctrl']['sortField']) {
             $queryBuilder->orderBy($GLOBALS['TCA'][$tablename]['ctrl']['sortField'], Query::ORDER_ASCENDING);
